<resources>
    <string name="app_name">billplease</string>
    <string name="amount">Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="svsDisabled">SVS disabled</string>
    <string name="svsEnabled">SVS enabled</string>
    <string name="gstDisabled">GST disabled</string>
    <string name="gstEnabled">GST enabled</string>
    <string name="gst">GST</string>
    <string name="svs">SVS</string>
    <string name="discount">Discount(%)</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
</resources>
